cmake_minimum_required(VERSION 3.15)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/creational_model/singleton/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/creational_model/prototype/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/creational_model/factory_method/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/creational_model/abstract_factory/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/creational_model/simple_factory/)